--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>Developer Skills & Editor Setup</h1>
+    <h1>Developer Skills & Editor Setups for live</h1>
     <script src="/03-Developer-Skills/starter/script.js"></script>
   </body>
 </html>
